...
    ) {
        var isUserEditingCurrentTime by rememberSaveable { mutableStateOf(false) }

        CurrentSpeedHeader(
            visible = videoSpeedAcceleratingUiState.isActive,
            modifier = Modifier
                .testTag("VideoPlayerCurrentSpeedHeader")
                .align(Alignment.TopCenter)
                .padding(top = 20.dp)
        )

        if (!isUserEditingCurrentTime) {
            VideoPlayerControlsHeader(
...
            videoControlsState = videoControlsState,
            modifier = Modifier
                .testTag("VideoPlayerSeekAnimation")
                .align(Alignment.Center)
        )

        VideoPlayerSettings(
            videoControlsState = videoControlsState,
            visible = isVideoPlayerSettingsVisible,
            isFullScreen = isFullScreen,
            onDismiss = { isVideoPlayerSettingsVisible = false },
            onVideoSpeedSelected = {
                isVideoPlayerSettingsVisible = false
...
        modifier = modifier
    ) {
        Box(modifier = Modifier.fillMaxWidth()) {
            if (isFullScreen) {
                NavigateBackArrow(
                    onClick = navigateBack,
                    modifier = Modifier.testTag("VideoPlayerNavigateBackButton")
                )
            }
            Text(
                text = title,
                color = Color.White,
                modifier = Modifier
                    .testTag("VideoPlayerVideoTitle")
                    .align(Alignment.Center)
            )
            SettingsButton(
                onClick = onSettingsClick,
                modifier = Modifier
                    .testTag("VideoPlayerSettingButton")
                    .align(Alignment.TopEnd)
            )
        }
    }
}

...
                exit = fadeOut()
            ) {
                ControlButton(
                    enabled = hasPreviousMediaItem,
                    onClick = onPreviousClick,
                    drawableId = R.drawable.baseline_skip_previous_24,
                    modifier = Modifier.testTag("VideoPlayerPreviousButton")
                )
            }
        }

        if (isLoading) {
            CircularProgressIndicator(
                color = Color.White,
                strokeWidth = 2.dp,
                modifier = Modifier
                    .testTag("VideoPlayerLoadingIndicator")
                    .size(48.dp)
            )
        } else {
            AnimatedVisibility(
                visible = visible,
                enter = fadeIn(),
...
                if (isPlaying) {
                    ControlButton(
                        enabled = true,
                        onClick = onPauseClick,
                        drawableId = R.drawable.baseline_pause_24,
                        iconSize = 38.dp,
                        modifier = Modifier.testTag("VideoPlayerPauseButton")
                    )
                } else if (isPaused) {
                    ControlButton(
                        enabled = true,
                        onClick = onPlayClick,
                        drawableId = R.drawable.baseline_play_arrow_24,
                        iconSize = 38.dp,
                        modifier = Modifier.testTag("VideoPlayerPlayButton")
                    )
                } else if (isEnded) {
                    ControlButton(
                        enabled = true,
                        onClick = onReplayClick,
                        drawableId = R.drawable.baseline_replay_24,
...
                exit = fadeOut()
            ) {
                ControlButton(
                    enabled = hasNextMediaItem,
                    onClick = onNextClick,
                    drawableId = R.drawable.baseline_skip_next_24,
                    modifier = Modifier.testTag("VideoPlayerNextButton")
                )
            }
        }
    }
}

...
                    currentTimeSliderPosition = it.toLong()
                },
                onFinishTimeChanging = {
                    onFinishTimeChanging(currentTimeSliderPosition.toFloat())
                },
                modifier = Modifier
                    .testTag("VideoPlayerTimeAndBufferingView")
                    .height(12.dp)
                    .fillMaxWidth()
            )
        }
    }
}
...
        modifier = modifier
    ) {
        CurrentTimeAndTotalDuration(
            currentTimeMs = currentTimeMs,
            totalDurationMs = totalDurationMs,
            modifier = Modifier
                .testTag("VideoPlayerCurrentTimeAndTotalDuration")
                .padding(horizontal = 20.dp)
        )
        FullScreenButton(
            isFullScreen = isFullScreen,
            onClick = onFullScreenClick,
            modifier = Modifier.testTag("VideoPlayerFullScreenButton")
        )
    }
}

@Composable
private fun CurrentEditingTime(
...
