...
import androidx.compose.ui.unit.sp
import ru.ilyasekunov.foodhubvideoplayer.R

internal const val DefaultSpeed = 1f
internal const val MaxSpeed = 2f

internal val AvailablePlaybackSpeedValues = listOf(
    0.25f,
    0.5f,
    0.75f,
    DefaultSpeed,
    1.25f,
    1.5f,
...
            shape = RoundedCornerShape(10.dp),
            sheetState = rememberModalBottomSheetState(skipPartiallyExpanded = true),
            windowInsets = windowInsets,
            modifier = modifier
        ) {
            Column(modifier = Modifier.verticalScroll(rememberScrollState())) {
                PlaybackSpeedSelector(
                    currentSpeed = videoControlsState.speed,
                    onClick = {
                        currentSettingSelected = AvailableSettings.PlaybackSpeed
                    },
                    modifier = Modifier.testTag("PlaybackSpeedSelector")
                )
...
