...

        VideoPlayerCurrentTimeObserver(
            player = player,
            videoControlsState = videoControlsState
        )

        VideoPlayer(
            player = player,
            modifier = Modifier
                .testTag("VideoPlayer")
                .fillMaxSize()
        )

        VideoPlayerControls(
            videoControlsState = videoControlsState,
            onClick = { videoControlsState.visible = !videoControlsState.visible },
            onSeekForward = player::seekForward,
            onSeekBack = player::seekBack,
            onPlayClick = {
                player.play()
...
